<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/header_profile_orange">

        <ImageView
            android:id="@+id/asso_profile_image_association"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/bg_shadow"
            android:elevation="1dp"
            app:layout_constraintBottom_toTopOf="@id/asso_profile_scrollview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/asso_profile_scrollview" />

        <ImageView
            android:id="@+id/asso_profile_icon_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_arrow_back_white" />

        <ScrollView
            android:id="@+id/asso_profile_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/bg_profile"
            android:paddingTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/asso_profile_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:paddingTop="25dp">

                <TextView
                    android:id="@+id/asso_profile_name"
                    style="@style/h1_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/asso_profile_description"
                    style="@style/profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:visibility="gone" />

                <include
                    android:id="@+id/asso_profile_subscribe"
                    layout="@layout/layout_rounded_button_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:content="@{@string/import_picture}"
                    app:drawable="@{@drawable/bg_button_rounded_orange}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/asso_profile_scrollview" />

                <TextView
                    android:id="@+id/asso_profile_needs"
                    style="@style/h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/needs"
                    android:visibility="gone" />

                <include
                    android:id="@+id/asso_profile_donation"
                    layout="@layout/item_association_needs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@{@drawable/ic_city}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asso_profile_birthday"
                    app:title="@{@string/accept_donations}" />

                <include
                    android:id="@+id/asso_profile_volunteers"
                    layout="@layout/item_association_needs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@{@drawable/ic_contribution}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asso_profile_birthday"
                    app:title="@{@string/volunteers}" />

                <TextView
                    android:id="@+id/asso_profile_information"
                    style="@style/h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/contact" />

                <include
                    android:id="@+id/asso_profile_phone"
                    layout="@layout/item_association_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@{@drawable/ic_phone}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asso_profile_birthday"
                    app:title="@{@string/phone}" />

                <include
                    android:id="@+id/asso_profile_web"
                    layout="@layout/item_association_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@{@drawable/ic_phone}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asso_profile_birthday"
                    app:title="@{@string/web_site}" />

                <include
                    android:id="@+id/asso_profile_address"
                    layout="@layout/item_association_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@{@drawable/ic_phone}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asso_profile_birthday"
                    app:title="@{@string/phone}" />

                <include
                    android:id="@+id/asso_profile_email"
                    layout="@layout/item_association_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@{@drawable/ic_email}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asso_profile_phone"
                    app:title="@{@string/email}" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>