...
    <!-- My Entourages -->
    <string name="myentourages_no_items_details">Demandez à rejoindre des actions, contactez des membres et vous retrouverez vos conversations avec les membres du réseau ici</string>

    <!-- Create Action Wizard -->
    <string name="create_action_wizard_p1_title">DERNIÈRE QUESTION</string>
    <string name="create_action_wizard_p1_description">Créez-vous cette action solidaire <b>pour une personne identifiée, autre que vous :</b> un ami en situation précaire, une personne croisée dans la rue ?</string>
    <string name="create_action_wizard_p1_option1">@string/yes</string>
    <string name="create_action_wizard_p1_option2">Non, je demande pour moi</string>
    <string name="create_action_wizard_p1_option3">Non, pour une association</string>

    <string name="create_action_wizard_p2_title">DERNIÈRE QUESTION</string>
    <string name="create_action_wizard_p2_description">Avez-vous <b>obtenu son consentement</b> pour diffuser cette action pour elle sur Entourage ?</string>
    <string name="create_action_wizard_p2_option1">Oui, j\'ai son accord</string>
...
