<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/header0"
        layout="@layout/layout_header_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@{@string/select_photo}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="22dp" />

    </LinearLayout>

    <Button
        android:id="@+id/validate"
        style="@style/h2_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button_orange_fill"
        android:drawablePadding="10dp"
        android:text="@string/validate"
        android:textAllCaps="false" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>