...
            android:id="@+id/title"
            style="@style/h1_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="29dp"
            android:text="@string/event_success_title"
            app:layout_constraintBottom_toTopOf="@id/subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/subtitle"
...
