...
                android:layout_marginHorizontal="7dp"
                android:background="@drawable/event_coordinator_layout_topleft_topright_rounded"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:userInputEnabled="@{false}" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/create_event_expanded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@drawable/ic_fab_plus"
                android:text="@string/create_event_btn_title"
...
